FreeST/test/Programs/InvalidTests/SessionTypes/partiallyAppliedSelect/partiallyAppliedSelect.fst
main : Skip
main = select Nil
